<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.whimc</groupId>
    <artifactId>WHIMC-Observations</artifactId>
    <version>2.4.8</version>
    <name>WHIMC Observations</name>
    <description>Create holographic observations in worlds</description>

    <repositories>
        <!-- This adds the Spigot Maven repository to the build -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!-- Maven repo for Holographic Displays -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <!-- Maven repo for Quests -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- Maven repo for ProtocolLib -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--This adds the Spigot API artifact to the build -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.14.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Add HolographicDisplays to the build -->
        <dependency>
            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
            <artifactId>holographicdisplays-api</artifactId>
            <version>2.4.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Add Quests to the build -->
        <dependency>
            <groupId>com.github.PikaMug.Quests</groupId>
            <artifactId>quests-main</artifactId>
            <version>4.0.8</version>
            <scope>provided</scope>
        </dependency>
        <!-- Add ProtocolLib to the build-->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.7.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Repo for plugin -->
    <scm>
        <connection>scm:git:git@github.com:whimc/Observation-Displayer.git</connection>
        <tag>HEAD</tag>
    </scm>

    <build>
        <!-- Allow pom.xml value substitution in plugin.yml -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <!-- Github release settings -->
        <plugins>
            <plugin>
                <groupId>de.jutzig</groupId>
                <artifactId>github-release-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <description>Release for v${project.version}</description>
                    <releaseName>${project.artifactId}-${project.version}</releaseName>
                    <tag>${project.version}</tag>
                    <fileSets>
                        <fileSet>
                            <directory>${project.build.directory}</directory>
                        </fileSet>
                    </fileSets>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
